--- a/vignettes/spathial_vignette.Rmd
+++ b/vignettes/spathial_vignette.Rmd
@@ -1,73 +1,82 @@
 ---
-title: "A short introduction to the Spathial Package"
-output: rmarkdown::html_vignette
-vignette: >
-  %\VignetteIndexEntry{Vignette Title}
-  %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteEncoding{UTF-8}
+title: "A short introduction to the _spathial_ Package"
+# output: pdf_document
+output: html_document
+#output: rmarkdown::html_vignette
+#vignette: >
+#  %\VignetteIndexEntry{Spathial Package Vignette}
+#  %\VignetteEngine{knitr::rmarkdown}
+#  %\VignetteEncoding{UTF-8}
 ---
-The spathial package contains function to create a path able to navigate a n-dimensional space. __ADD__
+```{r echo=FALSE}
+knitr::opts_chunk$set(fig.width=7, fig.height=5) 
+```
+
+The _spathial_ package contains function to create a path able to navigate a n-dimensional space.
 
 # Quick start
-In this section we show the most basic steps which allows to compute the principal path. We begin with a simple example in 2-dimensions just to become familiar with the functions inside Spathial. 
+In this section we show the most basic steps to compute the _spathial_ implementation of the principal path [citation needed], through a simple 2-dimensional example.
 
 Let's start installing spathial to ensure that all the needed spackages are installed.
-
-```r
+```{r eval=FALSE}
 install.packages("spathial")
 ```
 
+And then we load the package:
+```{r}
+library("spathial")
+```
+
 ## Step 1: load data
-To compute the principal path we assume that you have an input matrix ```X```. Each column of the matrix ```X``` is a feature and each row has a univocal name. We also assume that you have an input vector ```X_labels``` which contains for each row of ```X``` the corresponding label. For the sake of simplicity, we create a simple .csv file with 900 samples and 3 columns (2 + labels). The following code chunck shows how to load the .csv and how to format the data.
+To compute the principal path we assume that you have an input matrix ```X```. Each column of the matrix ```X``` is a feature (e.g. a gene) and each row has a univocal name (e.g. a sample). We also assume that you have an input vector ```X_labels``` which contains for each row of ```X``` a description label (e.g. the sample category). Labels must be integer numbers ranging from 1 to the n-th category. For the sake of simplicity, we provide a simple .csv file with 900 samples and 3 columns (2 + labels). The following code chunck shows how to load the .csv and how to format the data.
 
-```r
-#load the dataset
+```{r}
+# Load the dataset with 900 samples
 myfile<-system.file("extdata", "2D_constellation.csv", package = "spathial")
-data<-read.csv(myfile,as.is=TRUE,header=TRUE)
-
-#matrix X with 4 columns (4 dimensions) and univocal rownames
-X <- data[,2:(ncol(data)-1)]
-rownames(X)<-paste0("sam",rownames(X))
-
-#vector X_labels
-X_labels <- data$Y
+data<-read.csv(myfile,as.is=TRUE,header=TRUE,row.names=1)
+head(data)
 ```
 
-Computing the function ```head``` given ```X``` and ```X_labels``` as input you can obtain the following output:
+```{r}
+# Vector X_labels
+X_labels <- data$label
 
-```r
-> head(X)
-            V1        V2
-sam1  0.440620 -0.206480
-sam2 -0.305250  0.122770
-sam3 -0.234850  0.097566
-sam4  0.205200 -0.058423
-sam5  0.022774  0.134450
-sam6 -0.223260  0.092053
-
-> head(X_labels)
-[1] 8 3 8 8 8 8
+# Data Matrix X
+X <- data[,1:(ncol(data)-1)]
 ```
 
-To following code chunk shows how to plot the datapoints colored according to ```X_labels```:
-
-```r
-#Plot the results
-colors <- rainbow(length(table(X_labels)))
-colors_labels <- sapply(X_labels, function(x){colors[x]})
-plot(X[,1],X[,2], col=colors_labels,pch=as.character(X_labels))
+This is how the The Data Matrix ```X``` should look like at this point
+```{r}
+head(X)
 ```
 
-The following picture shows the graphical representation of the datapoints:
+The sample labels Vector ```X_labels```, assigning categories to each sample,
+according to the order in ```X``` rows
+```{r}
+head(X_labels)
+```
 
-![_2D constellation example - data points_](figures/2D_constellation/datapoints.png){width=75%}
+The following code chunk shows how to plot the datapoints colored according to ```X_labels```:
+
+```{r fig.cap="_Quick Start example dataset_"}
+# Plot the results
+colors<-rainbow(length(unique(X_labels)))
+colors_labels<-sapply(X_labels,function(x){colors[x]})
+plot(X[,1],X[,2],col=colors_labels,pch=as.character(X_labels),
+     xlab=colnames(X)[1],ylab=colnames(X)[2])
+```
+
+
+<!-- The following picture shows the graphical representation of the datapoints: -->
+<!-- ![_2D constellation example - data points_](figures/2D_constellation/datapoints.png){width=75%} -->
+
 
 ## Step 2: select the boundaries
 The fist step to compute the principal path consists in selecting the starting and the ending points. The package spathial gives you the function ```spathialBoundaryIds``` which takes as input the matrix ```X```, the corresponding labels ```X_labels``` and the parameters ```mode```, ```from``` and ```to```.
 
 The parameter ```mode``` has to assume one the following values:
 
-* __1__ _(default)_: the user can randomly choose the starting and the ending points directly from the 2D representations of the data points. In this case the values of the parameters ```from``` and ```to``` are not considered.
+* __1__ _(default)_: the user can choose the starting and the ending points directly from the 2D representations of the data points. In this case the values of the parameters ```from``` and ```to``` are not considered.
 * __2__: the starting point is the centroid of all the data points labelled as the parameter ```from```, while the ending point is the centroid of all the data points labelled as the parameter ```to```.
 * __3__: the starting point is the data point with the univocal rowname equal to the parameter ```from``` while the ending point is the data point with the univocal rowname equal to the parameter ```to```.
 
@@ -79,43 +88,41 @@ The output of the function ```spathialBoundaryIds``` is a list with the followin
 
 __N.B.__ The matrix ```X``` and the vector ```X_labels``` change only when ```mode=2``` (the resulting matrix and vector have two additional elements, corresponding to the centroids).
 
-The following code chuncks show how to use the function ```spathialBoundaryIds```, with different values of the parameter ```mode```, and how to extract the output:
+The following code chunks show how to use the function ```spathialBoundaryIds```, with different values of the parameter ```mode```, and how to extract the output:
 
-```r
-#mode=1
+``` {r eval=FALSE}
+# mode=1 (User-selected)
 boundary_init <- spathial::spathialBoundaryIds(X, X_labels, mode=1)
 ```
-
-```r
-#mode=2
+``` {r eval=FALSE}
+# mode=3 (From named sample to another named sample)
+boundary_init <- spathial::spathialBoundaryIds(X, X_labels, mode=3,
+                                               from="sample123", to="sample456")
+```
+``` {r}
+# mode=2 (From named label centroid to another label centroid)
 boundary_init <- spathial::spathialBoundaryIds(X, X_labels, mode=2, from=3, to=6)
 ```
 
-```r
-#mode=3
-boundary_init <- spathial::spathialBoundaryIds(X, X_labels, mode=3, from="sam123", to="sam456")
+Once the boundaries are defined, and only in the case of ```mode=2```, the ```X``` and X_labels objects contain extra meta-samples (the boundaries) and need to be updated.
+``` {r}
+# Take the output from the variable boundary_init
+boundary_ids<-boundary_init$boundary_ids
+X<-boundary_init$X
+X_labels<-boundary_init$X_labels
 ```
 
-```r
-#take the output from the variable boundary_init
-boundary_ids <- boundary_init$boundary_ids
-X <- boundary_init$X
-X_labels <- boundary_init$X_labels
+The following plots the boundaries when ```mode=2```, ```from=3``` and ```to=6```:
+``` {r fig.cap="_Quick Start example - boundaries_"}
+plot(X[,1],X[,2], col=colors_labels, pch=as.character(X_labels),
+     xlab=colnames(X)[1],ylab=colnames(X)[2],main="Boundary points")
+points(X[boundary_ids,],pch="x",col="black",cex=4)
 ```
 
-```r
-#Plot the results
-boundaries <- X[which(rownames(X) == boundary_ids[1] | rownames(X) == boundary_ids[2]),]
-plot(X[,1],X[,2], col=colors_labels, pch=as.character(X_labels))
-points(boundaries[,1],boundaries[,2], pch="x",col="black",cex=4)
-```
-
-The following picture shows the boundaries when ```mode=2```, ```from=3``` and ```to=6```:
-
-![_2D constellation example - boundaries_](figures/2D_constellation/boundaries.png){width=75%}
+<!-- ![_2D constellation example - boundaries_](figures/2D_constellation/boundaries.png){width=75%} -->
 
 ## Step 3: prefiltering (optional)
-The principal path is an algorithm intrinsically global. If you are searching for a path which does not involve the whole dataset, you can perform the function ```spathialPrefiltering```  before the principal path algorithm is applied, otherwise this filtering procedure is not due.
+The principal path is an algorithm intrinsically global. If you are searching for a path which does not involve the whole dataset, you can perform the function ```spathialPrefiltering```  before the principal path algorithm is applied. If you want to run _spathial_ on the entire dataset, this filtering procedure is not due.
 
 The function ```spathialPrefiltering``` takes as input the matrix ```X```, the corresponding labels ```X_labels``` and the boundaries ```boundary_ids``` which are the result of the function ```spathialBoundaryIds```.
 
@@ -124,26 +131,32 @@ The output of the function ```spathialPrefiltering``` is a list with the followi
 * __mask__: the indexes of the samples to preserve;   
 * __boundary_ids_filtered__: the rowname of the starting and the ending points.
 
-The following code chunck shows how to use the function ```spathialPrefiltering``` and how to extract the output:
+The following code chunck shows how to use the function ```spathialPrefiltering``` and how to extract the output. The function tags excluded samples and we store them in the ```X_garbage``` matrix. The ```mask``` vector contains the samples to be kept.
 
-```r
+```{r}
 # Prefilter data
 filter_res <- spathial::spathialPrefiltering(X, X_labels, boundary_ids)
 mask <- filter_res$mask
 boundary_ids <- filter_res$boundary_ids
 
-#Plot the results
+# Plot the results
 boundaries <- X[which(rownames(X) == boundary_ids[1] | rownames(X) == boundary_ids[2]),]
 X_garbage <- X[!mask,]
-
-plot(X[,1],X[,2], col=colors_labels, pch=as.character(X_labels))
-points(boundaries[,1],boundaries[,2], pch="x",col="black",cex=4)
-points(X_garbage[,1],X_garbage[,2], col="gray", pch=4)
 ```
 
-The following picture shows the result of the plot:
+The following code shows the results of the prefiltering step, with excluded points greyed out:
+```{r fig.cap="_Quick Start example - prefiltering_"}
+par(mfrow=c(1,2))
+plot(X[,1],X[,2], col="black",pch=20,main="Before Filtering",
+     xlab=colnames(X)[1],ylab=colnames(X)[2])
+points(X[boundary_ids,],pch="x",col="red3",cex=4)
+plot(X[,1],X[,2], col="black",pch=20,main="After Filtering",
+     xlab=colnames(X)[1],ylab=colnames(X)[2])
+points(X[boundary_ids,],pch="x",col="red3",cex=4)
+points(X_garbage[,1],X_garbage[,2], col="gray", pch=16)
+```
 
-![_2D constellation example - prefiltering_](figures/2D_constellation/prefiltering.png){width=75%}
+<!-- ![_2D constellation example - prefiltering_](figures/2D_constellation/prefiltering.png){width=75%} -->
 
 ## Step 4: principal path
 The function ```spathialWay``` computes the principal path algorithm and gives as output the principal path points. It takes as input the matrix ```X```, the labels ```X_labels```, the boundaries ```boundary_ids``` and the parameters ```NC``` and ```neighbors```. 
@@ -160,13 +173,13 @@ With ```neighbors=0``` the value of the output ```perturbed_path``` will be alwa
 
 The following code chuncks show how to use the function ```spathialWay```, with or without prefiltering, and how to extract the output:
 
-```r
+```{r results='hide'}
 # Compute principal path without prefiltering
 NC <- 50
 spathial_res <- spathial::spathialWay(X, X_labels, boundary_ids, NC, neighbors = 0)
 ```
 
-```r
+```{r results='hide'}
 # Compute principal path after prefiltering
 X_filtered <- X[mask,]
 X_labels_filtered <- X_labels[mask]
@@ -174,10 +187,10 @@ NC <- 50
 spathial_res <- spathial::spathialWay(X_filtered, X_labels_filtered, boundary_ids, NC, neighbors = 0)
 ```
 
-The next subsection shows hot to use the result ```spathial_res```.
+The next subsection shows how to extract results from the ```spathial_res``` object.
 
 ## Step 5: understanding the results
-The package Spathial includes three different functions to understand the output of the principal path algorithm: ```spathialPlot```, ```spathialLables``` and ```spathialStatistics```. The following subsections describe what they do and how to use each of them.
+The package _spathial_ includes three different functions to understand the output of the principal path algorithm: ```spathialPlot```, ```spathialLables``` and ```spathialStatistics```. The following subsections describe what they do and how to use each of them.
 
 ### Plot principal path
 The function ```spathialPlot``` plots the principal path together with all the data points (filtered and not) and the boundaries. The function takes as input the matrix ```X``` (the initial version), the vector ```X_labels```, the boundaries ```boundary_ids```, the output of the principal path algorithm ```spathial_res```, the parameter ```perplexity value``` (default 30) and the parameter ```mask``` which is one of the result of the prefiltering and it is ```NULL``` when the prefiltering is not computed.
@@ -185,100 +198,80 @@ When the input matrix ```X``` has more than 2 columns, the function reduce the d
 
 The following code chuncks show hot to use the function ```spathialPlot``` with the principal path generated during the previous step (with and without prefiltering):
 
-```r
-#Plot principal path with prefiltering - mask not NULL
-spathial::spathialPlot(X, X_labels, boundary_ids, spathial_res, perplexity_value=30, mask)
+```{r fig.height=10, fig.cap='_Output of the spathialPlot() function. Filtered samples are marked in grey_'}
+par(mfrow=c(2,1))
+# Plot principal path with prefiltering - provide a mask
+spathial::spathialPlot(X, X_labels, boundary_ids, spathial_res,
+                       perplexity_value=30, mask=mask,
+                       xlab=colnames(X)[1],ylab=colnames(X)[2],
+                       main="Principal path with prefiltering"
+)
 
-#Plot principal path without prefiltering - mask NULL
-spathial::spathialPlot(X, X_labels, boundary_ids, spathial_res, perplexity_value=30)
+# Plot principal path without prefiltering - mask NULL
+spathial::spathialPlot(X, X_labels, boundary_ids, spathial_res,
+                       perplexity_value=30,
+                       xlab=colnames(X)[1],ylab=colnames(X)[2],
+                       main="Principal path without prefiltering"
+)
 ```
+<!-- The following pictures show the output of the function ```spathialPlot``` for both the examples: -->
+<!-- ![_2D constellation example - principal path without prefiltering_](figures/2D_constellation/pp_no_prefiltering.png){width=75%} -->
+<!-- ![2D constellation example - principal path with prefiltering](figures/2D_constellation/pp_prefiltering.png){width=75%} -->
 
-The following pictures show the output of the function ```spathialPlot``` for both the examples:
-
-![_2D constellation example - principal path without prefiltering_](figures/2D_constellation/pp_no_prefiltering.png){width=75%}
-
-
-![2D constellation example - principal path with prefiltering](figures/2D_constellation/pp_prefiltering.png){width=75%}
-
-### Compute lables with Knn
-The function ```spathialLables``` assignes to each waypoints of the principal path a lables considering the labels of the nearest point in the data space. This type of analysis can be useful when you want to verify if the path moves respecting a specific evolution. The function takes as input the matrix ```X``` (which is composed only by the preserved samples if you compute the prefiltering), the vector ```X_labels``` and the output of the principal path algorithm ```spathial_res```. The output are the labels for each waypoints of the principal path.
+### Assess path progression __THE PARAGRAPH IS COMPLETELY UNCLEAR. WHY THIS IS USEFUL TO THE NEW USER? WHAT IS KNN? EXPLAIN BETTER__
+The function ```spathialLabels``` assigns to each waypoints of the principal path a label considering the label of the nearest point in the data space. This type of analysis can be useful when you want to verify if the path moves respecting a specific evolution. The function takes as input the matrix ```X``` (which is composed only by the preserved samples if you compute the prefiltering), the vector ```X_labels``` and the output of the principal path algorithm ```spathial_res```. The output are the labels for each waypoint of the principal path.
 
 The following code chuncks show how to use the function ```spathialLabels``` and how to plot the result:
 
-```r
-#Matrix X not filtered
+```{r fig.cap='_Quick Start example - path labels across path steps_'}
+### Matrix X not filtered
 ppath_labels <- spathial::spathialLabels(X, X_labels, spathial_res)
-#Plot the results
+# Plot the results
 ppath_labels <- as.vector(ppath_labels)
 colors_labels_ppath <- sapply(ppath_labels, function(y){colors[as.integer(y)]})
-plot(c(1:length(ppath_labels)), c(ppath_labels), col=colors_labels_ppath, pch=as.character(ppath_labels))
+plot(c(1:length(ppath_labels)), c(ppath_labels), col=colors_labels_ppath,
+     pch=as.character(ppath_labels), xlab="Path Step", ylab="Sample Label",
+     main="Path progression"
+)
 ```
 
-```r
-#Matrix X filtered
-#Labels for each waypoint with knn
-ppath_labels <- spathial::spathialLabels(X_filtered, X_labels_filtered, spathial_res)
+<!-- The following pictures show the labels for each waypoint for both the previous examples: -->
+<!-- ![_2D constellation example - labels of the principal path without prefiltering_](figures/2D_constellation/labels_no_prefiltering.png){width=75%} -->
+<!-- ![_2D constellation example - labels of the principal path with prefiltering_](figures/2D_constellation/labels.png){width=75%} -->
 
-#Plot the results
-ppath_labels<- as.vector(ppath_labels)
-colors_labels_ppath <- sapply(ppath_labels, function(y){colors[as.integer(y)]})
-plot(c(1:length(ppath_labels)), c(ppath_labels), col=colors_labels_ppath, pch=as.character(ppath_labels))
-```
-
-The following pictures show the labels for each waypoint for both the previous examples:
-
-![_2D constellation example - labels of the principal path without prefiltering_](figures/2D_constellation/labels_no_prefiltering.png){width=75%}
-
-
-![_2D constellation example - labels of the principal path with prefiltering_](figures/2D_constellation/labels.png){width=75%}
-
-### Compute the statistics
-The function ```spathialStatistics``` returns some statistics related to result of the principal path algorithm ```spathial_res```.
+### Extract Features associated to the principal path
+The function ```spathialStatistics``` returns statistics for each feature, based on their relation with th principal path calculated and stored in ```spathial_res```.
 In particular, here we want to focus on how much each feature (a coordinate of the N-dimensional space) is involved along the evolution of the principal path. 
 
-For this reason, the output of the function ```spathialStatistics``` is a list with the following content:
+For this reason, the output of the function ```spathialStatistics``` is a list with the following content, associating the features with a specific score associating it with path progression.
 
-* __correlations__;
-* __fisher_correlations__; gives for each f
-* __rank_scores__.
+* __correlations__: This vector contains the Pearson's correlation coefficients between each feature and the path.
+In the case of multiple paths (see the _neighbor_ parameter, described later in this vignette), a simple arithmetic mean of the correlation coefficients is provided (**Which is simply a WRONG and not accepted mathematical operation and I don't know why you don't want to ackowledge it. This is a huge open flank for statisticians to reject the package and the paper https://www.researchgate.net/post/average_of_Pearson_correlation_coefficient_values https://stats.stackexchange.com/questions/8019/averaging-correlation-values**)
+* __fisher_correlations__; This vector contains the Pearson's correlation coefficients between each feature and the path.
+In the case of multiple paths (see the _neighbor_ parameter, described later in this vignette), a Fisher-integrated correlation coefficient is provided.
+* __rank_scores__: This vector contains the ranks of associations between the n features and the path (1 being the most positively correlated, and n the most negatively correlated).
+In the case of multiple paths (see the _neighbor_ parameter, described later in this vignette), a Fisher-integrated correlation coefficient is provided.
 
-Given the simplified scenario where the parameter ```neighbors``` of the function ```spathialWay``` is always equal to ```0```, the output of the function ```spathialStatistics``` is simplified as follow:
+The following code chunks show how to use the function ```spathialStatistics``` and to extract the correlation-based association between features and the path.
 
-* __correlations__: gives for each features the correlation value with the evolution of the principal path;
-* __fisher_correlations__: NULL;
-* __rank_scores__: NULL.
-
-The following code chuncks show how to use the function ```spathialStatistics``` and how to plot the results:
-
-```r
-#Statistics about each feature of the path
+```{r message="hide"}
+# Calculate Association Statistics for each feature in the path
 statistics <- spathial::spathialStatistics(spathial_res)
+
+# Extract Pearson correlation coefficients between features and path
+statistics$correlations
 ```
 
-```r
-#Plot the results
-corr_values <- as.numeric(unlist(statistics$correlations))
+<!-- The following pictures show how much each feature is correlated with the evolution of the principal path (for both the principath paths with and without prefiltering): -->
 
-sub_correlation_matrix <- matrix(data=0, nrow = (length(corr_values)), ncol = 1)
-colnames(sub_correlation_matrix) <- "pp"
-rownames(sub_correlation_matrix) <- colnames(X)
-sub_correlation_matrix[,ncol(sub_correlation_matrix)] <- corr_values
+<!-- ![_2D constellation example - correlation features/evolution without prefiltering_](figures/2D_constellation/correlations_no_prefiltering.png){width=35%}  -->
 
-library(corrplot)
-library(RColorBrewer)
-corrplot(sub_correlation_matrix, method="circle", is.corr=FALSE, cl.pos = "r", cl.ratio = 1, cl.lim = c(-1,1))
-```
-
-The following pictures show how much each feature is correlated with the evolution of the principal path (for both the principath paths with and without prefiltering):
-
-![_2D constellation example - correlation features/evolution without prefiltering_](figures/2D_constellation/correlations_no_prefiltering.png){width=35%} 
-
-![_2D constellation example - correlation features/evolution with prefiltering_](figures/2D_constellation/correlations_prefiltering.png){width=35%}
+<!-- ![_2D constellation example - correlation features/evolution with prefiltering_](figures/2D_constellation/correlations_prefiltering.png){width=35%} -->
 
 
-__N.B.__: all the other blocks are intentionally blank, beacuse not interesting for our goal.
 
-#A slightly more complex example
+
+# A slightly more complex example
 In this section we show another example with more than 2-dimensions. In this case our input matrix ```X``` is a reduced version of the TCGA Liver Cancer dataset which is composed only by the 100 features (genes) with the highest variance. The vector ```X_labels``` contains the information about the patiens. In particular, the label is 2 when the patiens is healthy, 1 otherwise.
 
 In this case, the aim of the example is to navigate the space fram the centroid of the healthy patients to the centroid of the unhealthy patients in order to gradually morphing from one health state to the other.
@@ -359,7 +352,7 @@ The following picture shows the corresponding output:
 
 This picture identifies the genes that could be particolarly involved during the evolution from healthy to unhealthy. 
 
-#How to work with high-dimensional data
+# How to work with high-dimensional data
 When you want to work with high dimensional data, one of the problems that could occur is the overfitting. This means that the principal path algorithm could find a lot of different features all correlated with the evolution from the starting point to the ending one. 
 
 If you are interested in finding a restricted group of features which are very correlated with the evolution, we suggest to use a more complex version of the function ```spathialWay```. It takes as input the parameter ```neighbour > 0``` and perform a refined version of the principal path algorithm.
